# flipid

./: .dockerignore  .env  .gitignore  .travis.yml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  development.md  diesel.toml  rustfmt.toml
.circleci/: config.yml
.claude/: settings.local.json
.github/: FUNDING.yml
doc/: TODO.md  architecture.md  development.md  docker-compose.yaml  flipid_alpha1.config.schema.json  oidc.md
migrations/20181224_init/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs
src/core/: config.rs  cookies.rs  error.rs  mod.rs  models.rs  response.rs  secrets.rs  state.rs  traits.rs  web_util.rs
src/db/: mod.rs  schema.rs
src/idp/: mod.rs
src/oidc/: authorize.rs  common.rs  discovery.rs  dynamic_registration.rs  introspection.rs  jwks.rs  mod.rs  session.rs  test_authorize.rs  test_token.rs  test_userinfo.rs  token.rs  userinfo.rs
templates/: error.html  login.html
tests/: test_authorize.rs  test_e2e.rs  test_e2e_authorization_code.rs  test_introspection.rs  test_login.rs  test_token.rs  test_userinfo.rs
tests/bruno/: folder.yml
tests/bruno/flip-id/: Discovery.yml  Introspect.yml  JWKs.yml  OIDC Discovery.yml  UserInfo.yml  opencollection.yml
tests/bruno/flip-id/environments/: local.yml
tests/common/: mod.rs
tests/resources/: .env
tests/resources/config/: cert.pem  id_rsa  id_rsa.pub  key.pem
