# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flipid"
description = "A lightweight Openid Provider"
version = "0.1.0"
authors = ["Teodor Bran <teos@bran.tech>"]
keywords = ["openid", "oidc", "login", "authentication"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
actix-web = { version = "4.9.0", features = ["openssl"] }
actix-rt = "2.10.0"
actix-http = "3.9.0"
actix-session = "0.10.1"
actix-files = "0.6.6"
openssl = { version = "0.10.68", features = ["v110"] }

tera = "1.0"  # template for the web pages (https://tera.netlify.com/docs)

serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"

futures = "0.3"
url = "2.5.4"

diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8"
chrono = "0.4"
dotenv = "0.15"
#uuid = { version = "0.8", features = ["serde", "v4"] }

jsonwebtoken = "9.3"
crypto-hash = "0.3"
rand = "0.8"
base64 = "0.22"

failure = "0.1"
log = "0.4"
env_logger = "0.11"

# standard crate data is left out
[dev-dependencies]
mockall = "0.13"
#pretty_assertions = "0.6"  not that pretty actually
