# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flipid"
description = "A lightweight Openid Provider"
version = "0.1.1"
authors = ["Teodor Bran <teos@bran.tech>"]
keywords = ["openid", "oidc", "login", "authentication"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["openssl"] }
actix-rt = "2.10"
actix-http = "3.9"
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-files = "0.6"
openssl = { version = "0.10", features = ["v110"] }

tera = "1.0"  # template for the web pages (https://tera.netlify.com/docs)

serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"

futures = "0.3"
url = "2.5"

diesel = { version = "2.3", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8"
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "1.11", features = ["serde", "v4"] }

jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
crypto-hash = "0.3"
rand = "0.10"
base64 = "0.22"

failure = "0.1"
log = "0.4"
env_logger = "0.11"

mockall = { version = "0.14", optional = true }

[features]
# Enables mock types for use in integration tests (tests/ directory).
# Run: cargo test --features testing
testing = ["dep:mockall"]

# standard crate data is left out
[dev-dependencies]
mockall = "0.14"
#pretty_assertions = "0.6"  not that pretty actually
