# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "flipid"
description = "A lightweight Openid Provider"
version = "0.1.1"
authors = ["Teodor Bran <teos@bran.tech>"]
keywords = ["openid", "oidc", "login", "authentication"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["openssl", "secure-cookies"] }
actix-rt = "2.10"
actix-http = "3.9"
actix-files = "0.6"
actix-cors = "0.7"
#cookie = {  version = "0.18", features = ["secure", "percent-encode"] }
openssl = { version = "0.10", features = ["v110"] }

tera = "1.0"  # template for the web pages (https://tera.netlify.com/docs)

serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"

futures = "0.3"
url = "2.5"

diesel = { version = "2.3", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8"
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "1.11", features = ["serde", "v4"] }

jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
bcrypt = "0.19.0"
rand = "0.10"
base64 = "0.22"

thiserror = "2"
log = "0.4"
env_logger = "0.11"

mockall = { version = "0.14", optional = true }

[features]
# Enables mock types for use in integration tests (tests/ directory).
# Run: cargo test --features testing
testing = ["dep:mockall"]

# standard crate data is left out
[dev-dependencies]
mockall = "0.14"
